2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added test for Time::elapsed(time_t).
	* test/TimeTest.cc

2008-10-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug in Time::elapsed(): Util::difftvsec() is used where
	Util::difftv() should be used instead.
	* src/TimeA2.cc
	* src/TimeA2.h

2008-10-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made socket for dht connections non-blocking
	* src/DHTAbstractMessage.cc
	* src/DHTAbstractMessage.h
	* src/DHTConnection.h
	* src/DHTConnectionImpl.cc
	* src/DHTConnectionImpl.h
	* src/DHTMessage.h
	* src/DHTMessageDispatcherImpl.cc
	* src/DHTMessageDispatcherImpl.h
	* src/DHTUnknownMessage.cc
	* src/DHTUnknownMessage.h
	* src/SocketCore.cc
	* src/SocketCore.h
	* test/MockDHTMessage.h

2008-10-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed the type of offset to int.
	* src/ParameterizedStringParser.cc

2008-10-04  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made getAsInt() return int32_t
	* src/Option.h

2008-10-04  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Check the availability of winsock2.h and ws2tcpip.h only for mingw32
	build.
	* configure.ac

2008-10-04  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use sqlite3_open if sqlite3_open_v2 is not available.
	* src/Sqlite3MozCookieParser.cc
	* src/Sqlite3MozCookieParser.h
	* m4/sqlite3.m4
	* test/Sqlite3MozCookieParserTest.cc

2008-10-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Replaced '%zu' with '%lu' since mingw32 doesn't recognize '%zu'.
	* src/BtPieceMessage.cc
	* src/DHTPeerAnnounceStorage.cc
	* src/DefaultPieceStorage.cc
	* src/DownloadCommand.cc
	* src/DownloadEngine.cc
	* src/FtpConnection.cc
	* src/PeerConnection.cc
	* src/PeerMessageUtil.cc
	* src/RequestGroup.cc
	* src/RequestGroupMan.cc
	* src/SimpleBtMessage.cc

2008-10-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use seek() and SetEndOfFile() for mingw32 build instead of ftruncate(),